--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
             <div class="col-sm-6">
                 <p>
                     <a href="https://github.com/Andrea-Boyd" target = "blank">
-                        <img border="0" alt="github logo" src="assets/github logo.png" width="100" height="100">
+                        <img border="0" alt="github logo" src="./Assets/githubLogo.png" width="100" height="100">
                     </a>
                 </p>
             </div>            
