--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="row">
             <div class="col-4">
                 <div class="card" style="width: 18rem;">
-                    <img src="./Assets/awkwardSelfie.jpg" class="card-img-top" alt="A Photo of Moi" class="img-fluid" alt="Responsive image"/>
+                    <img src="./Assets/awkwardSelfie.jpg" class="card-img-top" alt="A Photo of Moi" />
                 </div>
             </div>
             <div class="col-4">
