Updated file path for all photos

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="assets/placehold.png" alt="Placeholder" class="img-thumbnail">
+                    <img class="card-img-top" src="./Assets/placehold.png" alt="Placeholder" class="img-thumbnail">
                     <div class="card-body">
                       <h2 class="card-title">Name of Project</h2>
                       <p class="card-text">Explanation of Project</p>
