--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,31 @@
                         <img border="0" alt="github logo" src="./Assets/githubLogo.png" width="100" height="100">
                     </a>
                 </p>
+                <br/>
+                <br/>
+                <br/>
+                <p>
+                  <a href="https://www.linkedin.com/in/andrea-boyd" target = "blank">
+                      <img border="0" alt="linkedin logo" src="./Assets/LI-In-Bug.png" width="100" height="100">
+                  </a>
+              </p>
+              <br/>
+              <br/>
+              <br/>
+              <p>
+                <a href="mailto:boydandrea100@gmail.com" target = "blank">
+                    <img border="0" alt="email logo" src="./Assets/email.jpg" width="100" height="100">
+                </a>
+            </p>
+            <br/>
+            <br/>
+            <br/>
+            <p>
+              <a href="./resume.pdf" target = "blank"> 
+                  <img border="0" alt="resume logo" src="./Assets/resume.jpg" width="100" height="100">
+              </a>
+          </p>
+
             </div>            
         </div>
     </div>
