--- a/portfolio.html
+++ b/portfolio.html
@@ -44,13 +44,14 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="./Assets/placehold.png" alt="Placeholder" class="img-thumbnail">
+                    <img class="card-img-top" src="./Assets/songScout.png" alt="Placeholder" class="img-thumbnail">
                     <div class="card-body">
-                      <h2 class="card-title">Name of Project</h2>
-                      <p class="card-text">Explanation of Project</p>
+                      <h2 class="card-title">Song Scout</h2>
+                      <p class="card-text">Song Scout is an essential tool for any music fan. It allows you to get to know your favorite artists and albums more intimately, by providing essential biographic information.</p>
                     </div>
                     <div class="card-body">
-                      <a href="#" class="card-link">Repo Link</a>
+                      <a href="https://github.com/Andrea-Boyd/Song-Scout" target="_blank" class="card-link">View Repo Here</a>
+                      <a href="https://andrea-boyd.github.io/Song-Scout/" target="_blank" class="card-link">View App Here</a>
                     </div>
                 </div>
             </div>
@@ -58,11 +59,11 @@
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="./Assets/placehold.png" alt="Placeholder" class="img-thumbnail">
                     <div class="card-body">
-                      <h2 class="card-title">Name of Project</h2>
-                      <p class="card-text">Explanation of Project</p>
+                      <h2 class="card-title">Employee Directory React</h2>
+                      <p class="card-text">This application is a simple tool to search and sort an employee database.</p>
                     </div>
                     <div class="card-body">
-                      <a href="#" class="card-link">Repo Link</a>
+                      <a href="https://github.com/Andrea-Boyd/Employee-Directory-React-" class="card-link">View Repo Here</a>
                     </div>
                 </div>
             </div> 
@@ -72,7 +73,7 @@
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="./Assets/placehold.png" alt="Placeholder" class="img-thumbnail">
                     <div class="card-body">
-                        <h2 class="card-title">Name of Project</h2>
+                        <h2 class="card-title">Currently in Development</h2>
                         <p class="card-text">Explanation of Project</p>
                     </div>
                     <div class="card-body">
@@ -84,7 +85,7 @@
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="./Assets/placehold.png" alt="Placeholder" class="img-thumbnail">
                     <div class="card-body">
-                        <h2 class="card-title">Name of Project</h2>
+                        <h2 class="card-title">Currently in Development</h2>
                         <p class="card-text">Explanation of Project</p>
                     </div>
                     <div class="card-body">
