updated portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,13 +57,14 @@
             </div>
             <div class="col-sm-6">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="./Assets/placehold.png" alt="Placeholder" class="img-thumbnail">
+                    <img class="card-img-top" src="./Assets/employeeFinder2.PNG" alt="Placeholder" class="img-thumbnail">
                     <div class="card-body">
                       <h2 class="card-title">Employee Directory React</h2>
                       <p class="card-text">This application is a simple tool to search and sort an employee database.</p>
                     </div>
                     <div class="card-body">
                       <a href="https://github.com/Andrea-Boyd/Employee-Directory-React-" class="card-link">View Repo Here</a>
+                      <a href="https://andrea-boyd.github.io/Employee-Directory-React-/" class="card-link">View App Here</a>
                     </div>
                 </div>
             </div> 
